force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__Carrier__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Carrier__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  clofor_com_cfs__WorkOrderService__r.clofor_com_cfs__Carrier__c  , clofor_com_cfs__WorkOrderService__r.clofor_com_cfs__Carrier__r.Name , &apos;_top&apos;)</formula>
    <label>CARRIER</label>
    <type>Text</type>
</CustomField>