force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__ContainerID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTAINER ID</label>
    <referenceTo>clofor_com_cfs__CONTAINER__c</referenceTo>
    <relationshipLabel>W/O/S LINE</relationshipLabel>
    <relationshipName>WOSLineContainer</relationshipName>
    <type>Lookup</type>
</CustomField>