force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__GoodsSOID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsSOID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  clofor_com_cfs__WorkOrderService__r.clofor_com_cfs__GoodsSOID__c  ,  clofor_com_cfs__WorkOrderService__r.clofor_com_cfs__GoodsSOID__r.Name  , &apos;_top&apos;)</formula>
    <label>GOODS S/O ID</label>
    <type>Text</type>
</CustomField>