force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__IsCargoScanned__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IsCargoScanned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cargo Scanned</label>
    <type>Checkbox</type>
</CustomField>