force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__Locator__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Locator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOCATOR</label>
    <referenceTo>clofor_com_cfs__LOCATOR__c</referenceTo>
    <relationshipName>WOSLineItemID</relationshipName>
    <type>Lookup</type>
</CustomField>