force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__ProductID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  clofor_com_cfs__Cargo__r.clofor_com_cfs__Product__c ,  clofor_com_cfs__Cargo__r.clofor_com_cfs__Product__r.Name  , &apos;_top&apos;)</formula>
    <label>PRODUCT ID</label>
    <type>Text</type>
</CustomField>