force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__QRCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QRCodeLabel__c</fullName>
    <formula>clofor_com_cfs__Cargo__r.clofor_com_cfs__QrCodeImage__c</formula>
    <label>QR CODE LABEL</label>
    <type>Text</type>
</CustomField>