force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__ScanTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ScanTime__c</fullName>
    <label>Scan Time</label>
    <type>DateTime</type>
</CustomField>