force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__WORecordType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WORecordType__c</fullName>
    <formula>clofor_com_cfs__WorkOrderID__r.RecordType.Name</formula>
    <label>W/O RECORD TYPE</label>
    <type>Text</type>
</CustomField>