force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__WOSRecordType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WOSRecordType__c</fullName>
    <formula>clofor_com_cfs__WorkOrderService__r.RecordType.Name</formula>
    <label>W/O/S RECORD TYPE</label>
    <type>Text</type>
</CustomField>