force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/fields/clofor_com_cfs__WOSScheduledStartTiome__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WOSScheduledStartTiome__c</fullName>
    <formula>clofor_com_cfs__WorkOrderService__r.clofor_com_cfs__ScheduledStartTime__c</formula>
    <label>W/O/S SCHEDULED START TIME</label>
    <type>DateTime</type>
</CustomField>