force-app/main/default/objects/clofor_com_cfs__WOSLineItem__c/listViews/clofor_com_cfs__InboundReceiving.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__InboundReceiving</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__WorkOrderService__c</columns>
    <columns>clofor_com_cfs__WOSRecordType__c</columns>
    <columns>clofor_com_cfs__WorkOrderID__c</columns>
    <columns>clofor_com_cfs__CargoStatus__c</columns>
    <columns>clofor_com_cfs__ScanTime__c</columns>
    <columns>clofor_com_cfs__GoodsPOID__c</columns>
    <columns>clofor_com_cfs__GoodsSOID__c</columns>
    <columns>clofor_com_cfs__CarrierCode__c</columns>
    <columns>clofor_com_cfs__Carrier__c</columns>
    <columns>clofor_com_cfs__Cargo__c</columns>
    <columns>clofor_com_cfs__QRCodeLabel__c</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__WOSRecordType__c</field>
        <operation>contains</operation>
        <value>Receiving</value>
    </filters>
    <label>2.Inbound Receiving</label>
    <language>en_US</language>
</ListView>